@@ -8,6 +8,8 @@ Version 2.4
 
 (bugfix release, release date to be decided)
 
+- Corrected a bug in the change of the help option in 2.3.
+
 Version 2.3
 -----------
 
